realizados cambios en tablas para centrarlas, y en ordenes visuales

--- a/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.css
+++ b/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.css
@@ -41,3 +41,26 @@ select:hover{
 .alerta{
   color: red;
 }
+
+.fechaDer {
+  padding-left: 15%;
+}
+
+.bordeDiv {
+  /*border: 5px solid red;*/
+  background-color: #f1f1f1;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #ced4da;
+}
+
+.bordeTransporte {
+  background-color: #e1ede3;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #ced4da;
+}
+
+.espacioIzq{
+  padding-left: 15%;
+}
