--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -59,7 +59,7 @@
       <!--<p [hidden]="opcionSeleccionada=='0'">Has seleccionado la opcion {{misProyectos[i].acronimo}}</p>-->
       <div class="card-body" [hidden]="!verSeleccionada">
 
-        <form class="card mb-4"  [formGroup]="formGastos" >
+        <form class="card mb-4 bordeTransporte"  [formGroup]="formGastos" >
           <h3 class="texto-form mt-3">Relación de gastos</h3>
           <!-- Entradas simples -->
         <div class="form-group">
@@ -246,6 +246,6 @@
 
 
 
-  
+
 
 </div>
