--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
   <div class="row">
     <div class="col-md-6">
       <h4 *ngIf="listaIP?.length > 0"> Revisar como IP</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="listaIP?.length > 0">
+      <table class="table text-center" id="tablaOrdenes" *ngIf="listaIP?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
@@ -24,11 +24,11 @@
           </tr>
         </thead>
         <tbody id="tablaOrdenes">
-            <tr *ngFor="let i of elementos[0];"> <!--and maxOrdenesOK(a))">--> 
+            <tr *ngFor="let i of elementos[0];"> <!--and maxOrdenesOK(a))">-->
                 <td>{{listaIP[getOrdenPagindoIndex(i, paginaActualIP)].estado}}</td>
                 <td>{{listaIP[getOrdenPagindoIndex(i, paginaActualIP)].concepto}}</td>
                 <td>{{listaIP[getOrdenPagindoIndex(i, paginaActualIP)].acronimo}}</td>
-             
+
                 <td>
                   <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', listaIP[getOrdenPagindoIndex(i, paginaActualIP)].id]" >
                     <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px">
@@ -39,7 +39,7 @@
             <button type="button" class="btn btn-link mr-2" (click) ="paginaActualIP= anterior(paginaActualIP, listaIP.length, 0)">
                 <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
             </button>
-            
+
             <button type="button" class="btn btn-link" (click) = "paginaActualIP = siguiente(paginaActualIP, listaIP.length, 0)">
                 <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
             </button>
@@ -47,14 +47,14 @@
         </tbody>
       </table>
     </div>
-  
+
 
 
 
     <!--Arriba DCHA -- Ultimas aceptadas-->
     <div class="col-md-6">
       <h4 *ngIf="aceptadas?.length > 0"> Ultimas Aceptadas</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="aceptadas?.length > 0">
+      <table class="table text-center" id="tablaOrdenes" *ngIf="aceptadas?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
@@ -78,21 +78,21 @@
             <button type="button" class="btn btn-link mr-2" (click) ="paginaActualA= anterior(paginaActualA, aceptadas.length, 1)">
                 <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
             </button>
-            
+
             <button type="button" class="btn btn-link" (click) = "paginaActualA = siguiente(paginaActualA, aceptadas.length, 1)">
                 <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
             </button>
           </tr>
         </tbody>
       </table>
-    </div>  
+    </div>
   </div>
 
 <!--Pendientes de Modificar-->
   <div class="row">
     <div class="col-md-6">
       <h4 *ngIf="pendientes?.length > 0"> Revisar como Investigador</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="pendientes?.length > 0">
+      <table class="table text-center" id="tablaOrdenes" *ngIf="pendientes?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
@@ -116,7 +116,7 @@
             <button type="button" class="btn btn-link mr-2" (click) ="paginaActualP= anterior(  paginaActualP, pendientes.length, 3)">
                 <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
             </button>
-            
+
             <button type="button" class="btn btn-link" (click) = "  paginaActualP = siguiente(  paginaActualP, pendientes.length, 3)">
                 <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
             </button>
@@ -125,10 +125,10 @@
       </table>
     </div>
 
-    
+
     <div class="col-md-6">
       <h4 *ngIf="rechazadas?.length > 0"> Ultimas Rechazadas</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="rechazadas?.length > 0">
+      <table class="table text-center" id="tablaOrdenes" *ngIf="rechazadas?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
@@ -146,7 +146,7 @@
               <button type="button" class="btn btn-link mr-2" (click) ="paginaActualR= anterior(paginaActualR, rechazadas.length, 2)">
                 <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
               </button>
-              
+
               <button type="button" class="btn btn-link" (click) = "paginaActualR = siguiente(paginaActualR, rechazadas.length, 2)">
                   <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
               </button>
