--- a/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.html
+++ b/src/app/components/vista-ordenes/add-orden-viajes/add-orden-viajes.component.html
@@ -52,6 +52,41 @@
           </div>
 
         </div>
+      <div class="row">
+        <div class="form-group form-inline espacioIzq">
+          <div>
+              <label class="texto-form" for="relacion">Relación con el proyecto:&nbsp;&nbsp;</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input ml-1" type="checkbox" value="" id="checkMP" (change)="capturarValorCheckInvestigador('MP')">
+            <label class="form-check-label mr-3" for="checkMP">
+              Miembro del proyecto
+            </label>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input ml-1" type="checkbox" value="" id="checkME" (change)="capturarValorCheckInvestigador('ME')">
+            <label class="form-check-label mr-3" for="checkME">
+              Miembro del equipo de trabajo
+            </label>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input ml-1" type="checkbox" value="" id="checkPI" (change)="capturarValorCheckInvestigador('PI')">
+            <label class="form-check-label mr-3" for="checkPI">
+              Profesor invitado
+            </label>
+          </div>
+        </div>
+
+        <!--<div class="form-group">
+          <label class="texto-form" for="relacion">Relación con el proyecto</label>
+          <textarea class="form-control" id="relacion" rows="3" placeholder="{{relacion}}" disabled></textarea>
+          <div class="alerta">
+            <small *ngIf="false">No puede estar vacio <br></small>
+          </div>
+        </div>-->
+  </div>
 
       <!--------------------------------------------------GASTOS----------------------------------------------------------------->
       <!--<app-gastos></app-gastos>-->
@@ -65,20 +100,22 @@
       <div class="card-body" [hidden]="!verSeleccionada">
 
         <!--Fechas-->
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="fechaIda"><b>Fecha ida</b></label>
+        <div class="form-row form-inline bordeDiv">
+          <div class="form-group col-md-6 fechaDer">
+            <label for="fechaIda"><b>Fecha ida:&nbsp;&nbsp;&nbsp;&nbsp;</b></label>
             <input type="date" class="form-control" formControlName="fechaIda" id="fechaIda" placeholder="Fecha ida" name="fechaIda">
           </div>
+
           <div class="form-group col-md-6">
-            <label for="fechaVuelta"><b>Fecha vuelta</b></label>
+            <label for="fechaVuelta"><b>Fecha vuelta:&nbsp;&nbsp;&nbsp;&nbsp;</b></label>
             <input type="date" class="form-control" formControlName="fechaVuelta" id="fechaVuelta" placeholder="Fecha vuelta" name="fechaVuelta">
             <div class="alerta">
               <small *ngIf="!formValid && gasto.fechaIda > gasto.fechaVuelta">Las fechas introducidas no son válidas <br></small>
             </div>
           </div>
         </div>
-
+        <br>
+  <div>
         <h3 class="texto-form mt-3">Elija los transportes que ha utilizado</h3>
         <!--Checkbox avion-->
         <div class="form-check">
@@ -89,7 +126,7 @@
         </div>
 
         <!--Avion-->
-        <div class="form-group" [hidden]="!checkAvion">
+        <div class="form-group bordeTransporte" [hidden]="!checkAvion">
           <div class="row">
               <div class="col-md-10">
                 <label class ="tx-secondary" for="avion"><b>Avion</b></label>
@@ -125,7 +162,7 @@
         </div>
 
         <!--Coche-->
-        <div class="form-group" [hidden]="!checkCoche">
+        <div class="form-group bordeTransporte" [hidden]="!checkCoche">
           <label class ="tx-secondary"><b>Coche</b></label>
           <div class="row">
               <div class="col-md-4">
@@ -171,7 +208,7 @@
         </div>
 
         <!--Tren-->
-        <div class="form-group" [hidden]="!checkTren">
+        <div class="form-group bordeTransporte" [hidden]="!checkTren">
           <div class="row">
               <div class="col-md-10">
                 <label class ="tx-secondary" for="tren"><b>Tren</b></label>
@@ -205,7 +242,7 @@
           </label>
         </div>
         <!--Autobus-->
-        <div class="form-group" [hidden]="!checkAutobus">
+        <div class="form-group bordeTransporte" [hidden]="!checkAutobus">
           <div class="row">
               <div class="col-md-10">
                 <label class ="tx-secondary" for="autobus"><b>Autobus</b></label>
@@ -240,7 +277,7 @@
         </div>
 
         <!--Taxi-->
-        <div class="form-group" [hidden]="!checkTaxi">
+        <div class="form-group bordeTransporte" [hidden]="!checkTaxi">
           <div class="row">
               <div class="col-md-10">
                 <label class ="tx-secondary" for="taxi"><b>Taxi</b></label>
@@ -275,10 +312,10 @@
         </div>
 
         <!--Otros-->
-        <div class="form-group" [hidden]="!checkOtros">
+        <div class="form-group bordeTransporte" [hidden]="!checkOtros">
           <div class="row">
               <div class="col-md-10">
-                <label class ="tx-secondary" for="otros"><b>Otros gastos</b></label>
+                <label class ="tx-secondary" for="otros"><b>Otros</b></label>
                 <input type="text" class="form-control" formControlName="otros" placeholder="(Máx 150 caracteres)" maxlength="200" id="otros" name="otros">
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
@@ -300,8 +337,10 @@
           </div>
         </div>
         <br>
+
+    </div>
         <!--Hotel-->
-        <div class="form-group">
+        <div class="form-group bordeDiv">
           <div class="row">
               <div class="col-md-10">
                 <br><br>
@@ -324,7 +363,7 @@
         </div>
         <br>
         <!--Manutención-->
-        <div class="form-group">
+        <div class="form-group bordeDiv">
           <label class ="tx-secondary"><b>Manutención</b></label>
           <div class="row">
               <div class="col-md-3">
@@ -335,7 +374,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-7">
                 <label for="precioDieta">cuantía por dieta(€/día) <a href="https://www.ucm.es/data/cont/docs/32-2018-07-11-20180711_cuadro_dietas.pdf" target="_blank">[Ver cuadro de dietas]</a></label>
                 <input type="number" class="form-control" formControlName="precioDieta" required min="0" value="0" step="any" name="precioDieta" id="precioDieta" onFocus="if (this.value==0) this.value='';" (change)="calculoImporteDietas()">
                 <div class="alerta">
@@ -343,7 +382,7 @@
                 </div>
               </div>
 
-              <div class="col-md-3">
+              <div class="col-md-2">
                 <label for="importeDietas">Importe</label>
                 <input type="number" class="form-control" formControlName="importeDietas" required min="0" value="0" step="any" name="importeDietas" id="importeDietas" disabled>
                 <div class="alerta">
@@ -355,7 +394,7 @@
 
          </div>
         <!--Otros gastos-->
-        <div class="form-group">
+        <div class="form-group bordeDiv">
           <div class="row">
               <div class="col-md-10">
                 <br><br>
@@ -379,7 +418,7 @@
         </div>
 
         <!--Importe total-->
-        <div class="form-group">
+        <div class="form-group bordeDiv">
           <div class="row">
               <div class="col-md-10">
                 <br><br>
@@ -408,13 +447,13 @@
         </div>
 
         <br>
-        <div class="form-group">
+        <!--<div class="form-group">
           <label class="texto-form" for="relacion">Relación con el proyecto</label>
           <textarea class="form-control" id="relacion" rows="3" placeholder="{{relacion}}" disabled></textarea>
           <div class="alerta">
             <small *ngIf="false">No puede estar vacio <br></small>
           </div>
-        </div>
+        </div>-->
 
         <br>
         <div class="form-group">
