--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -27,7 +27,7 @@
     </div>-->
 
     <p></p>
-    <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
+    <table class="table text-center" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
       <thead class="thead-dark">
         <tr>
 
@@ -63,7 +63,7 @@
           <button type="button" class="btn btn-link mr-2" (click) ="paginaActual= anterior(paginaActual, ordenes.length, 0)">
               <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
           </button>
-          
+
           <button type="button" class="btn btn-link" (click) = "paginaActual = siguiente(paginaActual, ordenes.length, 0)">
               <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
           </button>
